[package]
name = "xtask"
# Do not diverge this from Scarb's version. For simplicity we assume that both have same version in several commands.
version.workspace = true
edition.workspace = true
publish = false

# NOTE: Avoid adding new dependencies at all cost. The more complex building of this crate is, the much slower CI is.
[dependencies]
anyhow.workspace = true
clap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
xshell.workspace = true
