[package]
name = "scarb-cairo-execute"
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-executable.workspace = true
cairo-lang-runner.workspace = true
cairo-vm.workspace = true
camino.workspace = true
clap.workspace = true
create-output-dir = { path = "../../utils/create-output-dir" }
indoc.workspace = true
num-bigint.workspace = true
predicates.workspace = true
serde.workspace = true
serde_json.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }

[dev-dependencies]
scarb-test-support = { path = "../../utils/scarb-test-support" }
assert_fs.workspace = true
