[package]
name = "scarb-cairo-language-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cairo-lang-language-server.workspace = true

[dev-dependencies]
assert_fs.workspace = true
scarb-test-support = { path = "../../utils/scarb-test-support" }
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
