[package]
name = "scarb-cairo-language-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cairo-language-server = { git = "https://github.com/software-mansion/cairols", rev = "ac5cfde0372fce38e24bb4266b4ada3ddd457483" }

[dev-dependencies]
assert_fs.workspace = true
scarb-test-support = { path = "../../utils/scarb-test-support" }
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
