[package]
name = "scarb-cairo-run"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra.workspace = true
camino.workspace = true
clap.workspace = true
indoc.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
scarb-test-support = { path = "../../utils/scarb-test-support" }
snapbox.workspace = true
