[package]
name = "scarb-cairo-test"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
camino.workspace = true
clap.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
serde_json.workspace = true

[dev-dependencies]
snapbox.workspace = true
test-for-each-example = { path = "../../utils/test-for-each-example" }
scarb-test-support = { path = "../../utils/scarb-test-support" }
assert_fs.workspace = true
indoc.workspace = true
