[package]
name = "scarb-doc"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-doc.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-utils.workspace = true
create-output-dir = { path = "../../utils/create-output-dir" }
console.workspace = true
expect-test.workspace = true
indoc.workspace = true
itertools.workspace = true
mimalloc.workspace = true
tempfile.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-build-metadata = { path = "../../utils/scarb-build-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
scarb-extensions-cli = { path = "../../utils/scarb-extensions-cli", default-features = false, features = ["doc"] }
scarb-execute-utils = { path = "../../utils/scarb-execute-utils" }
serde.workspace = true
serde_json.workspace = true
salsa.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_fs.workspace = true
scarb-test-support = { path = "../../utils/scarb-test-support" }
snapbox.workspace = true
