[package]
name = "scarb-mdbook"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
mdbook.workspace = true
scarb-ui = { path = "../../utils/scarb-ui" }
scarb-cli = { path = "../../utils/scarb-cli" }
clap.workspace = true
anyhow.workspace = true
camino.workspace = true

[dev-dependencies]
scarb-test-support = { path = "../../utils/scarb-test-support" }
assert_fs.workspace = true
