[package]
name = "scarb-prove"
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
indoc.workspace = true
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
clap.workspace = true
serde.workspace = true
camino.workspace = true
serde_json.workspace = true
create-output-dir = { path = "../../utils/create-output-dir" }
stwo_cairo_prover.workspace = true
stwo-prover.workspace = true
scarb-execute = { path = "../scarb-execute" }

[dev-dependencies]
assert_fs.workspace = true
scarb-test-support = { path = "../../utils/scarb-test-support" }
snapbox.workspace = true
predicates.workspace = true
