[package]
name = "scarb-verify"
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cairo-air.workspace = true
camino.workspace = true
clap.workspace = true
indoc.workspace = true
mimalloc.workspace = true
scarb-extensions-cli = { path = "../../utils/scarb-extensions-cli", default-features = false, features = ["verify"] }
scarb-metadata = { path = "../../scarb-metadata" }
scarb-ui = { path = "../../utils/scarb-ui" }
serde_json.workspace = true
stwo_cairo_prover.workspace = true

[dev-dependencies]
assert_fs.workspace = true
scarb-test-support = { path = "../../utils/scarb-test-support" }
snapbox.workspace = true
