[package]
name = "cairo-lang-macro-attributes"
version = "0.2.1"
edition = "2021"
authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro interface primitives."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
scarb-stable-hash = "1"
