[package]
name = "cairo-lang-macro-stable"
version = "1.0.0"
edition.workspace = true

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro stable ABI interface primitives."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
