[package]
name = "cairo-lang-macro"
version = "0.1.1"
edition.workspace = true

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro interface primitives."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
cairo-lang-macro-attributes = "0.1"
cairo-lang-macro-stable = { path = "../cairo-lang-macro-stable" }
cairo-lang-stable-token.workspace = true
linkme.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
serde = ["dep:serde"]
