[package]
name = "cairo-lang-macro"
version = "0.2.0-rc.1"
edition = "2021"
rust-version = "1.73"

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro interface primitives."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
bumpalo.workspace = true
cairo-lang-macro-attributes = { path = "../cairo-lang-macro-attributes", version = "0.2.0-rc.1" }
cairo-lang-macro-stable = { path = "../cairo-lang-macro-stable", version = "2.0.0-rc.0" }
cairo-lang-primitive-token.workspace = true
cairo-lang-quote = { path = "../cairo-lang-quote", version = "0.1.0-rc.0" }
linkme.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true

[features]
serde = ["dep:serde"]
