[package]
name = "cairo-lang-quote"
version = "0.1.0"
edition.workspace = true

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro helper for constructing procedural macro results."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
