[package]
name = "cairo-lang-quote"
version = "0.2.0"
edition = "2021"

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro helper for constructing procedural macro results."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
ra-ap-rustc_parse_format.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = false, features = ["parsing", "derive", "proc-macro"] }
