[package]
name = "cairo-lang-macro-v2"
version = "0.1.1"
edition.workspace = true
rust-version = "1.73"

authors.workspace = true
categories = ["development-tools"]
description = "Cairo procedural macro interface primitives."
homepage.workspace = true
keywords = ["scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
bumpalo.workspace = true
cairo-lang-macro-attributes-v2 = { path = "../cairo-lang-macro-attributes" }
cairo-lang-macro-stable-v2 = { path = "../cairo-lang-macro-stable" }
cairo-lang-primitive-token.workspace = true
cairo-lang-quote = { path = "../cairo-lang-quote", version = "0.1.0" }
linkme.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true

[features]
serde = ["dep:serde"]
