[package]
name = "create-output-dir"
version = "1.0.0"
description = "Create an excluded from cache directory atomically"
edition.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
categories = ["filesystem", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tempfile.workspace = true

[target."cfg(target_os = \"macos\")".dependencies.core-foundation]
version = "0.10.0"
features = ["mac_os_10_7_support"]

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["minwindef"]
