[package]
name = "proc-macro-server-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cairo-lang-macro = { path = "../../plugins/cairo-lang-macro" }
serde.workspace = true
serde_json.workspace = true
